sfdx-source/force-app/main/default/objects/Job__c/fields/Tasks__c.field-meta.xml
<CustomField>
    <fullName>Tasks__c</fullName>
    <label>Tasks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tower</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>