sfdx-source/force-app/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Tasks__c</columns>
    <columns>Vendor__c</columns>
    <columns>Job_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>